add_executable(listing2_1 listing2_1.cpp)
add_executable(listing2_2 listing2_2.cpp)
add_executable(listing2_3 listing2_3.cpp)
add_executable(listing2_4 listing2_4.cpp)
add_executable(listing2_5 listing2_5.cpp)
add_executable(listing2_7 listing2_7.cpp)
add_executable(listing2_8 listing2_8.cpp)
add_executable(listing2_10 listing2_10.cpp)
add_executable(listing2_11 listing2_11.cpp)
add_executable(listing2_12 listing2_12.cpp)
add_executable(listing2_14 listing2_14.cpp)

add_executable(right_fold right_fold.cpp)
add_executable(string_trim string_trim.cpp)